--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,6 +4,6 @@ copy.src.target=
 index.file=index.php
 remote.connection=192.168.1.90-8d70bc
 remote.directory=
-remote.upload=ON_SAVE
+remote.upload=MANUALLY
 run.as=REMOTE
-url=http://77.101.82.27
+url=http://77.101.82.27/
